home view updated

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="title">Educ Africa Tasks </title>
+    <title class="title">Very Deep Tech Task</title>
 </head>
 <body>
     <p class="paragraph">Hello, the server is runing </p>
